initialized the package dev project

--- a/Packages/scene-management/package.json
+++ b/Packages/scene-management/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.kekw-detlef.",
+  "name": "com.kekw-detlef.scene-management",
   "version": "0.1.1",
   "displayName": "Scene Management",
   "description": "Manages Scenes",
