scene map fix maybe

--- a/Packages/scene-management/Editor/kekw-detlef.scene-management.Editor.asmdef
+++ b/Packages/scene-management/Editor/kekw-detlef.scene-management.Editor.asmdef
@@ -5,6 +5,9 @@
         "Unity.Addressables",
         "kekw-detlef.serializables.Runtime"
     ],
+    "optionalReferences": [
+        "kekw-detlef.scene-management.user-defined"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
